fix for li's not showing up

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -452,6 +452,7 @@ main br {
       .side-section .side-section-left {
         width: 100%; } }
   .side-section .side-section-right {
+    font-size: 18px;
     width: 66.66%;
     display: inline-block; }
     @media screen and (max-width: 999px) {
